[gd_scene load_steps=4 format=2]

[ext_resource path="res://Graphics/Fonts/pixel_2.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Objects/ProvinceEditor/Population/HouseholdButton.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="Button" type="HBoxContainer"]
margin_right = 274.0
margin_bottom = 22.0
custom_constants/separation = 0
script = ExtResource( 2 )

[node name="Education" type="Button" parent="."]
margin_right = 91.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )

[node name="SocClass" type="Button" parent="."]
margin_left = 91.0
margin_right = 182.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Рабо"

[node name="Delete" type="Button" parent="."]
margin_left = 182.0
margin_right = 274.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Уд-ть"

[connection signal="pressed" from="Education" to="." method="change_education"]
[connection signal="pressed" from="SocClass" to="." method="set_soc_class"]
[connection signal="pressed" from="Delete" to="." method="erase_household"]
